--- a/views/about.ejs
+++ b/views/about.ejs
@@ -40,6 +40,8 @@
 
                     </p>
                 </div>
+
+                <footer class="py-5">© 2022 ishtails. All rights reserved</footer>
             </div>
     </body>
 
