--- a/views/create.ejs
+++ b/views/create.ejs
@@ -23,6 +23,8 @@
     
                 <button class="bg-rose-500 hover:bg-rose-700 text-white font-bold py-2 px-4 rounded transition-all">Submit</button>
             </form>
+        
+            <footer class="py-5 self-center">© 2022 ishtails. All rights reserved</footer>
         </div>
 </body>
 </html>
